# pain

./: README.md  cleanup.sh  main.py  pyproject.toml
pain/: __init__.py  pain.py
pain/events/: __init__.py  bus.py  event.py
pain/panels/: __init__.py  actionbuttons.py  colorbox.py  drawing.py  panel.py  savebutton.py  toolbox.py  toolsettings.py
pain/tools/: __init__.py  eraser.py  line.py  pen.py  rectangle.py  spirograph.py  tool.py
tests/events/: test_bus.py
