[tool.poetry]
name = "pain"
version = "0.1.0"
description = "Paint"
authors = ["Alper Gundogdu <mail@alpergundogdu.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
isort = "<5.0.0"
pylint_runner = "^0.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
